...
) {
    Box(
        modifier
            .fillMaxWidth()
            .background(AppColors.surface)
            .navigationBarsPadding()
            .testTag("app-bottom-navigation"),
        contentAlignment = Alignment.Center,
    ) {
        Row(
            Modifier.widthIn(max = 600.dp)
                .fillMaxWidth()
                .selectableGroup()
...
